# WireBreakBack

./: README.md  app.py  pyproject.toml
controllers/: auth_controller.py  file_upload_controller.py  machine_controller.py  machine_type_controller.py  plant_controller.py  supplier_controller.py  wire_break_type_controller.py
models/: machine.py  machine_type_model.py  plant.py  role.py  supplier.py  wire_break_detail.py  wire_break_type_model.py
services/: auth_service.py  file_upload_service.py  machine_service.py  machine_type_service.py  plant_service.py  supplier_service.py  wire_break_type_service.py
